tests/ui/unknown_char.stderr
Error [E0001]: the character `$` doesn't mean anything here (yet)
  --> tests/ui/unknown_char.lex:2:13
    |
  2 |     val x = $1;
    |             ^
 Why: check docs/01-spec.md for what's supported so far
 Fix: remove it, or use supported syntax
