tests/ui/unknown_char.lex
fn main() {
    val x = $1;
    print(x);
}
